--- a/higgs-pred/data_exploration.ipynb
+++ b/higgs-pred/data_exploration.ipynb
@@ -2,8 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "473fb0be",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +14,7 @@
     "from omegaconf.omegaconf import OmegaConf\n",
     "import torch as t\n",
     "from higgs import DATAROOT, COLNAMES, HiggsDataModule, HiggsClassifier\n",
+    "from higgs.main import *\n",
     "from haikunator import Haikunator\n",
     "from pytorch_lightning.loggers import WandbLogger\n",
     "from pytorch_lightning.callbacks.model_checkpoint import ModelCheckpoint\n",
@@ -23,8 +23,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "5bcf9f71",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[33mWARNING: Value for scheme.headers does not match. Please report this to <https://github.com/pypa/pip/issues/9617>\n",
+      "distutils: /opt/conda/include/python3.6m/UNKNOWN\n",
+      "sysconfig: /opt/conda/include/python3.6m\u001b[0m\n",
+      "\u001b[33mWARNING: Additional context:\n",
+      "user = False\n",
+      "home = None\n",
+      "root = None\n",
+      "prefix = None\u001b[0m\n",
+      "Collecting haikunator\n",
+      "  Downloading haikunator-2.1.0-py2.py3-none-any.whl (4.6 kB)\n",
+      "Installing collected packages: haikunator\n",
+      "\u001b[33mWARNING: Value for scheme.headers does not match. Please report this to <https://github.com/pypa/pip/issues/9617>\n",
+      "distutils: /opt/conda/include/python3.6m/UNKNOWN\n",
+      "sysconfig: /opt/conda/include/python3.6m\u001b[0m\n",
+      "\u001b[33mWARNING: Additional context:\n",
+      "user = False\n",
+      "home = None\n",
+      "root = None\n",
+      "prefix = None\u001b[0m\n",
+      "Successfully installed haikunator-2.1.0\n",
+      "\u001b[33mWARNING: Running pip as root will break packages and permissions. You should install packages reliably by using venv: https://pip.pypa.io/warnings/venv\u001b[0m\n"
+     ]
+    }
+   ],
+   "source": [
+    "# !pip install plotly\n",
+    "# !pip install omegaconf\n",
+    "# !pip install pytorch-lightning\n",
+    "!pip install haikunator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,8 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "35980f89",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,8 +95,77 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
-   "id": "cb6d7131",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,7 +175,6 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2f3af0cf",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +443,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "33b01c4c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -347,7 +452,6 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "d0a6a2f7",
    "metadata": {},
    "outputs": [
     {
@@ -616,7 +720,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ab8bd8b9",
    "metadata": {},
    "outputs": [
     {
@@ -666,17 +769,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6db8815",
    "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (PyTorch 1.6 Python 3.6 CPU Optimized)",
    "language": "python",
-   "name": "python3"
+   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/pytorch-1.6-cpu-py36-ubuntu16.04-v1"
   },
   "language_info": {
    "codemirror_mode": {
@@ -688,7 +791,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.6.13"
   }
  },
  "nbformat": 4,
