--- a/higgs-pred/data_exploration.ipynb
+++ b/higgs-pred/data_exploration.ipynb
@@ -3,6 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
+   "id": "643d30ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "3780439e",
    "metadata": {},
    "outputs": [
     {
@@ -64,6 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "8d182f0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,6 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
+   "id": "b35421f5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,6 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8de33a0d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -103,6 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4e788ac0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -110,6 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7553125c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -117,6 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "e016ac76",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -124,6 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "7996d523",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -131,6 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3342c009",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -138,6 +148,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "745f9ce6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -145,6 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ff75d317",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -152,6 +164,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "15fe26a3",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -159,6 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9c5f0ea6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -166,6 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "f60bd712",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,6 +190,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "0d3584ea",
    "metadata": {},
    "outputs": [
     {
@@ -443,6 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "e14c3989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,6 +469,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "fa286417",
    "metadata": {},
    "outputs": [
     {
@@ -720,6 +738,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "eccf52ac",
    "metadata": {},
    "outputs": [
     {
@@ -769,6 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "0f2ef73d",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -777,9 +797,9 @@
  "metadata": {
   "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3 (PyTorch 1.6 Python 3.6 CPU Optimized)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/pytorch-1.6-cpu-py36-ubuntu16.04-v1"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -791,7 +811,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.13"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
